@@ -1817,6 +1817,10 @@ long* out_cnt;
 boolean want_disp;
 {
 	struct obj *otmp;
+#ifdef SORTLOOT
+	struct obj **oarray;
+	int i, j;
+#endif
 	char ilet, ret = '\0';
 	char *invlet = flags.inv_order;
 	int n, classcount;
@@ -1892,11 +1896,60 @@ boolean want_disp;
 	    return ret;
 	}
 
+#ifdef SORTLOOT
+	/* count the number of items */
+	for (n = 0, otmp = invent; otmp; otmp = otmp->nobj)
+	  if(!lets || !*lets || index(lets, otmp->invlet)) n++;
+
+	/* Make a temporary array to store the objects sorted */
+	oarray = (struct obj **)alloc(n*sizeof(struct obj*));
+
+	/* Add objects to the array */
+	i = 0;
+	for(otmp = invent; otmp; otmp = otmp->nobj)
+	  if(!lets || !*lets || index(lets, otmp->invlet)) {
+	    if (iflags.sortloot == 'f') {
+	      /* Insert object at correct index */
+	      for (j = i; j; j--) {
+		if (strcmpi(cxname2(otmp), cxname2(oarray[j-1]))>0) break;
+		oarray[j] = oarray[j-1];
+	      }
+	      oarray[j] = otmp;
+	      i++;
+	    } else {
+	      /* Just add it to the array */
+	      oarray[i++] = otmp;
+	    }
+	  }
+#endif /* SORTLOOT */
+
 	if (want_disp)
 		start_menu(win);
 nextclass:
 	classcount = 0;
 	any.a_void = 0;		/* set all bits to zero */
+#ifdef SORTLOOT
+	for(i = 0; i < n; i++) {
+	  otmp = oarray[i];
+	  ilet = otmp->invlet;
+	  if (!flags.sortpack || otmp->oclass == *invlet) {
+	    if (flags.sortpack && !classcount) {
+	      any.a_void = 0;             /* zero */
+	      if (want_disp)
+			add_menu(win, NO_GLYPH, &any, 0, 0, iflags.menu_headings,
+			       let_to_name(*invlet, FALSE), MENU_UNSELECTED);
+	      dump("  ", let_to_name(*invlet, FALSE));
+	      classcount++;
+	    }
+	    any.a_char = ilet;
+	    if (want_disp)
+		add_menu(win, obj_to_glyph(otmp),
+			     &any, ilet, 0, ATR_NONE, doname(otmp),
+			     MENU_UNSELECTED);
+	    dump_object(ilet, doname(otmp));
+	  }
+	}
+#else /* SORTLOOT */
 	for(otmp = invent; otmp; otmp = otmp->nobj) {
 		ilet = otmp->invlet;
 		if(!lets || !*lets || index(lets, ilet)) {
@@ -1922,6 +1975,7 @@ nextclass:
 			}
 		}
 	}
+#endif /* SORTLOOT */
 	if (flags.sortpack) {
 		if (*++invlet) goto nextclass;
 #ifdef WIZARD
@@ -1931,6 +1985,9 @@ nextclass:
 		}
 #endif
 	}
+#ifdef SORTLOOT
+	free(oarray);
+#endif
 	if (want_disp) {
 	end_menu(win, (char *) 0);
 
